Fixed the button outline on mobiles

--- a/src/my-sass.scss
+++ b/src/my-sass.scss
@@ -77,6 +77,7 @@ body {
 .button:hover {
     cursor: pointer;
     opacity: 90%;
+    outline: none;
 }
 
 .footer {
